--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background: url('https://images.unsplash.com/photo-1600276722340-07fa991ea218?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80') no-repeat center center fixed;
+    background-image: url('bg.jpg');
     background-size: cover;
     color: #fff;
     margin: 0;
